@@ -2,6 +2,7 @@
 
 	* Added pages_language_overlay to modified_tables to make EM happy
 	* Removed hash from tx_realurl_pathcache and optimized the whole handling of this cache with additional indexes
+	* Added strict mode with more checks for the configuration
 
 2009-01-01  Dmitry Dulepov  <dmitry@typo3.org>
 
